# GeckoC-

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Gecko.cpp  Gecko.h  Makefile  ast.cpp  cmake_install.cmake  colors.cpp  commander.cpp  errors.cpp  keyword.cpp  keywords.cpp  lexer.cpp  meson.build  parser.cpp  readfile.cpp  utils.cpp
golang/: go.mod  go.sum  main.go  meson.build  tokens.go
golang/scripts/: build.sh
includes/: .commander.h.kate-swp  ast.h  colors.h  commander.h  directives.h  errors.h  expressions.h  keyword.h  keywords.h  lexer.h  parser.h  readfile.h  utils.h
includes/asts/: declarations.h
includes/commands/: compile.h
includes/directives/: declarations.h  functions.h
tests/: test.gecko
tests/keywords/: const.gecko
